--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <html>
- <head>
- <title> Places to eat in Baltimore by neighborhood </title>
- </head>
+ <head></head>
  <body>
-  <h1> Hampden </h1>
+  <h1> Places to eat in Baltimore by neighborhood </h1>
+  <h2> Hampden </h2>
   <ul>
   <li> Golden West Cafe </li>
   <li> The Charmery </li>
@@ -11,24 +10,24 @@
   <li> The Food Market </li>
   <li> Paulie Gee's </li>
   </ul>
-  <h1> Remington </h1>
+  <h2> Remington </h2>
   <ul>
   <li> R.House </li>
   <li> Papermoon Diner </li>
   </ul>
-  <h1> Charles Village </h1>
+  <h2> Charles Village </h2>
   <ul>
   <li> Döner Brös </li>
   <li> Getrude's </li>
   </ul>
-  <h1> Locust Point </h1>
+  <h2> Locust Point </h2>
   <ul>
   <li> Jazz+Soju </li>
   <li> Urban Oyster </li>
   <li> Little Havana </li>
   <li> LP Steamers </li>
   </ul>
-  <h1> Fells Point </h1>
+  <h2> Fells Point </h2>
   <ul>
   <li> Barcocina</li>
   <li> Broadway Market </li>
