--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
   </ul>
   <h2> Remington </h2>
   <ul>
-  <li> R.House </li>
+  <li> R. House </li>
   <li> Papermoon Diner </li>
   </ul>
   <h2> Charles Village </h2>
   <ul>
   <li> Döner Brös </li>
-  <li> Getrude's </li>
+  <li> Gertrude's </li>
   </ul>
   <h2> Locust Point </h2>
   <ul>
