--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
- <head></head>
+ <head><title> Places to eat in Baltimore </title></head>
  <body>
   <h1> Places to eat in Baltimore by neighborhood </h1>
   <h2> Hampden </h2>
