--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head><title> Places to eat in Baltimore </title></head>
  <body>
-  <h1> Places to eat in Baltimore by neighborhood </h1>
+  <h1> Places to eat in Baltimore by Neighborhood </h1>
   <h2> Hampden </h2>
   <ul>
   <li> Golden West Cafe </li>
